# NoLifeStory

./: .clang-format  .gitattributes  .gitignore  .gitmodules  Audio.cpp  Audio.hpp  Background.cpp  Bitmap.cpp  Bitmap.hpp  Button.cpp  Button.hpp  CMakeLists.txt  ClassicUI.cpp  ClassicUI.hpp  Config.cpp  Config.hpp  File.cpp  File.hpp  Foothold.cpp  Foothold.hpp  Game.cpp  Game.hpp  Graphics.cpp  Graphics.hpp  Keys.cpp  Keys.h  Layer.cpp  Layer.hpp  Log.cpp  Log.hpp  Map.cpp  Map.hpp  NX.cpp  NX.hpp  NoLifeClient.cpp  NoLifeClient.hpp  NoLifeClient.vcxproj  NoLifeClient.vcxproj.filters  NoLifeIRC.cpp  NoLifeIRC.vcxproj  (+60 more)
client/: Background.cpp  Background.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Foothold.cpp  Foothold.hpp  Graphics.cpp  Graphics.hpp  Log.cpp  Log.hpp  NoLifeClient.vcxproj  NoLifeClient.vcxproj.filters  Obj.cpp  Obj.hpp  Physics.hpp  Player.cpp  Portal.cpp  README.md  Sound.cpp  Sound.hpp  Sprite.cpp  Sprite.hpp  Tile.cpp  Time.cpp  Time.hpp  View.cpp  View.hpp  background.cpp  background.hpp  config.cpp  config.hpp  foothold.cpp  foothold.hpp  game.cpp  game.hpp  graphics.cpp  graphics.hpp  layer.cpp  layer.hpp  (+19 more)
client/CMake/Modules/: glfwTargets-noconfig.cmake
cmake/: common.cmake
irc/: NoLifeIRC.vcxproj.filters
login/: NoLifeLogin.vcxproj
nx/: CMakeLists.txt  NoLifeNx.vcxproj  README.md  audio.cpp  audio.hpp  bitmap.cpp  bitmap.hpp  file.cpp  file.hpp  file_impl.hpp  lz4.cpp  lz4.hpp  node.cpp  node.hpp  node_impl.hpp  nx.cpp  nx.hpp  nxfwd.hpp
nxbench/: .gitignore  NoLifeNxBench.vcxproj  NoLifeNxBench.vcxproj.filters  nxbench.cpp
protocol/: NoLifeProtocol.cpp  NoLifeProtocol.hpp  NoLifeProtocol.vcxproj  NoLifeProtocol.vcxproj.filters
sdk/: README.md
src/: Global.h  Main.cpp  MapFile.cpp  MapFile.h  NX.cpp  NX.h  NX.hpp  Test.cpp  lz4.c  lz4.cpp  lz4.h  lz4.hpp
src/client/: CMakeLists.txt  ClassicUI.cpp  ClassicUI.hpp  background.cpp  background.hpp  character.cpp  character.hpp  config.cpp  config.hpp  foothold.cpp  foothold.hpp  game.cpp  game.hpp  layer.cpp  layer.hpp  log.cpp  log.hpp  main.cpp  map.cpp  map.hpp  obj.cpp  obj.hpp  physics.cpp  physics.hpp  player.cpp  player.hpp  portal.cpp  portal.hpp  sound.cpp  sound.hpp  sprite.cpp  sprite.hpp  tile.cpp  tile.hpp  time.cpp  time.hpp  view.cpp  view.hpp  window.cpp  window.hpp
src/client/CMake/Modules/: glfwConfig.cmake  glfwTargets.cmake
src/irc/: irc.cpp
src/mcdb/: mcdb.cpp
src/nx/: CMakeLists.txt  audio.cpp  audio.hpp  bitmap.cpp  bitmap.hpp  file.cpp  file.hpp  file_impl.hpp  node.cpp  node.hpp  node_impl.hpp  nx.cpp  nx.hpp  nxfwd.hpp
src/nxbench/: CMakeLists.txt  fraysa.cpp  nxbench.cpp
src/nxedit/: file.hpp  node.hpp
src/wz/: aes.cpp  aes.hpp  mapfile.cpp  mapfile.hpp  sprite.hpp  spritedata.hpp  wz.hpp  wzcrypto.cpp  wzcrypto.hpp  wzimg.cpp  wzimg.hpp  wzmain.cpp  wzmain.hpp  wznode.cpp
src/wztonx/: CMakeLists.txt  keys.cpp  wztonx.cpp
trade/: NoLifeTrade.vcxproj
vs11/: NoLifeNx.sln  NoLifeNx.vcxproj  NoLifeNx.vcxproj.filters
vs11/Test/: Test.vcxproj  Test.vcxproj.filters
world/: NoLifeWorld.vcxproj
wz/: .gitignore  aes.cpp  aes.h  mapfile.cpp  mapfile.h  wz.cpp  wz.h  wz.vcxproj  wz.vcxproj.filters  wzcrypto.cpp  wzcrypto.h  wzimg.cpp  wzimg.h  wzmain.cpp  wzmain.h  wznode.cpp
wz/wz/: aes.cpp  aes.h  mapfile.cpp  mapfile.h  sprite.h  wzcrypto.h  wzmain.h
wztest/: main.cpp  wztest.vcxproj
wztonx/: CMakeLists.txt  NoLifeWzToNx.vcxproj  wztonx.cpp
