cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)
project(NoLifeNx CXX)
if("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang" OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "GCC")
    add_compile_options(-std=c++11)
endif()
aux_source_directory(. NOLIFENX_SOURCES)
add_library(NoLifeNx STATIC ${NOLIFENX_SOURCES})
target_link_libraries(NoLifeNx lz4)
